@@ -14,6 +14,11 @@ control for music playback over a local network. Read more at musicpd.org
 
 How to compile and install ncmpc
 -------------------------------------------------------------------------------
+
+Requirements:
+	* ncurses 
+	* glib-2.2 (2.4 for NLS support)
+
 Download the ncmpc source code, then:
 	$ tar zxvf ncmpc-x.y.z.tar.gz
 	$ cd ncmpc-x.y.z
